--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <span class="dynamic-title" id="dynamic-title"></span>
         </h1>
         <p>
-          Asesoría en la utilización de herramientas de inteligencia artificial en su negocio. Mejora de procesos. Productos sencillos que permiten ahorrar tiempo y recursos. Servicio personalizado y cercano.
+          Productos sencillos para ahorrar tiempo y recursos, mejorar resultados y aumentar la calidad y la productividad. Servicio personalizado y cercano.
         </p>
       </div>
       <div class="buttons">
@@ -263,11 +263,16 @@
   <!-- Script para el contenido dinámico -->
   <script>
     const titles = [
-      "innovación y tradición",
-      "experiencia y aprendizaje",
-      "inteligencia y sentido común",
-      "tecnología y creatividad",
-      "una solución y un nuevo reto"
+      "innovación",
+      "tradición",
+      "experiencia",
+      "aprendizaje",
+      "inteligencia",
+      "sentido común",
+      "tecnología",
+      "creatividad",
+      "una solución",
+      "un reto"
     ];
     const dynamicTitle = document.getElementById("dynamic-title");
     titles.forEach((title, index) => {
