--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
       justify-content: center;
       gap: 20px;
       margin: 20px 0;
-      padding: 0 10px;
+      padding: 20px 10px;
     }
     /* Título para la sección de Fundadores */
     .founders h2 {
       width: 100%;
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 20px 10px;
       font-size: 1.5rem;
     }
     .founder {
@@ -151,7 +151,7 @@
     /* Sección de Chat de Pickaxe */
     .chat-container {
       width: 100%;
-      max-width: 600px;  /* Limita el ancho para centrarlo */
+      max-width: 800px;  /* Limita el ancho para centrarlo */
       background: transparent !important;
       margin: 20px auto 0;
       text-align: center;
@@ -255,7 +255,7 @@
     
     <!-- Sección para el Chat de Pickaxe con el nuevo código -->
     <div class="chat-container">
-      <iframe id="embed-preview-iframe" loading="eager" src="https://embed.pickaxeproject.com/axe?id=Casa_Virtudes_TT6SI&mode=embed_gold&host=beta&theme=custom&opacity=100&font_header=Real+Head+Pro&size_header=18&font_body=Real+Head+Pro&size_body=16&font_labels=Real+Head+Pro&size_labels=14&font_button=Real+Head+Pro&size_button=16&c_fb=000000&c_ff=000000&c_fbd=FFFFFF&c_rb=000000&c_bb=FFFFFF&c_bt=FFFFFF&c_t=FFFFFF&s_ffo=100&s_rbo=100&s_bbo=100&s_f=box&s_b=outline&s_t=0.5&s_to=0.5&s_r=0" width="100%" height="600px" class="transition hover:translate-y-[-2px] hover:shadow-[0_6px_20px_0px_rgba(0,0,0,0.15)]" style="border:0.5px solid rgba(0, 0, 0, 1);transition:.3s;border-radius:10px;max-width:100%" frameBorder="0"></iframe>
+      <iframe id="embed-preview-iframe" loading="eager" src="https://embed.pickaxeproject.com/axe?id=Casa_Virtudes_TT6SI&mode=embed_gold&host=beta&theme=custom&opacity=100&font_header=Real+Head+Pro&size_header=18&font_body=Real+Head+Pro&size_body=16&font_labels=Real+Head+Pro&size_labels=14&font_button=Real+Head+Pro&size_button=16&c_fb=000000&c_ff=000000&c_fbd=FFFFFF&c_rb=000000&c_bb=FFFFFF&c_bt=FFFFFF&c_t=FFFFFF&s_ffo=100&s_rbo=100&s_bbo=100&s_f=box&s_b=outline&s_t=0.5&s_to=0.5&s_r=0" width="100%" height="400px" class="transition hover:translate-y-[-2px] hover:shadow-[0_6px_20px_0px_rgba(0,0,0,0.15)]" style="border:0.5px solid rgba(0, 0, 0, 1);transition:.3s;border-radius:10px;max-width:100%" frameBorder="0"></iframe>
       <div id="pickaxe-inline-Casa_Virtudes_TT6SI"></div>
     </div>
   </div>
